# BC_Trading

./: .env.example  .gitignore  ARCHITECTURE.md  BC_RESEARCH_SETUP.md  Cargo.toml  PM2_SETUP.md  README.md  VERSION.md  config.toml  deploy.sh  ecosystem.config.js  install.bat  setup_systemd.sh
docs/: 2026-05-01_narrative_4x_winners.md
migrations/: 000_all_tables.sql  001_sniper_tables.sql  002_pipeline_latency.sql  003_trade_costs.sql  004_st_trade_snapshots.sql  005_narrative_moonbag.sql  006_narrative_result_column.sql  007_fast_runner_moonbag.sql  008_strategy_version.sql  009_exit_attempts_column.sql  010_position_enrichment_snapshots.sql  011_trade_latency.sql  012_sniper_candidates_score.sql  013_shadow_strategy_tables.sql  014_narrative_peak_price.sql  015_tracked_wallets.sql  016_archive_smart_wallet_signals.sql  017_bc_gate_backtest.sql  018_bc_paper_trades.sql  019_reentry_shadow.sql  020_shadow_log.sql  021_lane_b_progress_trigger.sql  022_v14_lanes.sql  023_bc_price_ticks.sql  024_path_eval_log.sql  025_bcs_progress_columns.sql  026_missing_tables.sql  027_bags_launch_monitor.sql  028_bags_shadow_entries.sql  029_early_buyer_rebuy_shadow.sql  029_first_minute_flow_shadow.sql  030_narrative_cluster_shadow.sql  030_token_lifecycle_classifier.sql  031_moonbag_exit_events.sql  031_proven_wallet_graph_shadow.sql  032_proven_runner_scale_in_shadow.sql  032_wallet_convergence_signals.sql  033_narrative_phase2_shadow.sql  033_wallet_convergence_retention.sql  034_creator_rebuy_bc_shadow_metrics.sql  (+6 more)
src/: config.rs  main.rs  meteora_dbc_shadow.rs  (+1 more)
(+65 files in other folders)
